--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 		background-color: #330004;
 		border: none;
 		border-radius: 3px;
-		margin: 5% 2%;
+		margin: 3%;
 		padding: 3.75% 7.5%;
 		
 		color: #FFFFF0;
@@ -580,6 +580,43 @@ p.read-more:hover{
 	}
 }
 */
+@media screen and (max-width:1440px){
+	button[type="button"], button[type="submit"] {
+		padding: 1% 3%;
+		font-size: 1vw;
+		font-weight:400;
+		margin: 1% 3%;
+	}
+	.logo-container > h2 { 
+		font-size: 3vw;
+	}
+	.navbar-container > ul > li{
+		font-size: 1.5vw;
+	}
+	.jumbo-child h1{
+		font-size: 3vw;
+	}
+	.jumbo-child p{
+		width:80%;
+		font-size: 1.5vw;
+		font-weight: 200;
+	}
+
+	.arrow{
+		width: 5vw;
+		height: 5vw;
+	}
+	.arrow i{
+		margin-top: 11px;
+		font-size: 3.5vw;
+	}
+}
+@media screen and (max-width:1440px) and (max-height:600px){
+	button[type="button"], button[type="submit"]{
+		margin: 3%;
+	}
+}
+
 @media screen and (max-width:1024px){
 	button[type="button"], button[type="submit"] {
 		padding: 1.5% 3%;
@@ -590,13 +627,13 @@ p.read-more:hover{
 		font-size: 5vw;
 	}
 	.navbar-container > ul > li{
-		font-size: 2vw;
+		font-size: 1.5vw;
 	}
 	.jumbo-child h1{
-		font-size: 3vw;
+		font-size: 2vw;
 	}
 	.jumbo-child p{
-		font-size:2.5vw;
+		font-size:2vw;
 		font-weight: 200;
 	}
 
@@ -607,6 +644,12 @@ p.read-more:hover{
 	.arrow i{
 		margin-top: 6px;
 		font-size: 5vw;
+	}
+}
+
+@media screen and (max-width:1024px) and (max-height:700px){
+	button[type="button"], button[type="submit"] {
+		margin: 2%;
 	}
 }
 
