--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,35 +37,36 @@ color library
 }
 html{scroll-behavior: smooth;}
 
-body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
+body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 
 /* 1. Typography Styles
 ======================================== */
 	h1{
-		color:#FFFFF0;
+		color: hsl(60, 100%, 97%);
 		font-family:'PT Sans Narrow', sans-serif; 
 		text-transform: uppercase;
 		font-weight: 600;
 		line-height:1.618;
-		font-size: 6.5vw;
-		letter-spacing: 0.15vw;
+		
+		font-size: 2rem;
+		letter-spacing: 1px;
 	}	
 	p{
-		color:#FFFFF0;
+		color: hsl(60, 100%, 97%);
 		font-family:'Raleway', sans-serif;
 		font-weight: 300;
-		font-size: 3.0vw; 
+		font-size: 16px; 
 	}
 	button[type="button"], button[type="submit"] {
-		background-color: #330004;
+		background-color: hsl(355, 100%, 10%);
 		border: none;
 		border-radius: 3px;
 		margin: 3%;
-		padding: 3.75% 7.5%;
+		padding: 2.5%;
 		
-		color: #FFFFF0;
+		color:  hsl(60, 100%, 97%);
 		text-transform: uppercase;
-		font-size: 3vw;
+		font-size: 12px;
 		font-weight:400;
 		text-align: center;
 		text-decoration:none;
@@ -115,37 +116,40 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	/* header stylings */
 		.header-container{
 			width:100%;
+			max-width:1440px;
+			margin: 0 auto;
 			flex-direction: column;
-			color:#FFFFF0;
+			color: hsl(60, 100%, 97%);
 		}
 		.logo-container{
 			margin: 0 auto;
 			text-transform: uppercase;
-			font-size: 2vw;
+			font-size: 2px;
 			justify-content: space-around;
 		}
 		.logo-container > h2 {
 			font-family: 'Lato', sans-serif; 
-			font-size: 5vw;
+			font-size: 36px;
 			padding: 2% 0 4%;
-			letter-spacing:1rem;
+			letter-spacing: 1px;
 			color: inherit;
 		}
 		
 		.navbar-container{
 			width:100%;
-			margin: 0 auto;
+			max-width: 1024px; 
+			margin: 15px auto 0;
 		}
 		.navbar-container > ul{
 			list-style: none;
 		}
 		.navbar-container > ul > li{
 			width: 100%;
-			font-size: 3.5vw;
+			font-size: 16px;
 			font-weight: 700;
 			line-height: 1.618;
 			text-transform: uppercase;
-			padding: 0 1%;
+			padding: 0%;
 			transition: color 0.2s ease-in;
 		}
 		.navbar-container > ul li:hover{
@@ -164,7 +168,7 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 			/* Jumbotron's child styling */
 				.jumbo-child{
 					justify-content: space-around;
-					color:#FFFFF0;
+					color: hsl(60, 100%, 97%);
 					text-align: center;
 				}
 
@@ -176,31 +180,33 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 				}
 				.jumbo-child p{
 					width:100%;
+					max-width: 768px;
 					margin:0 auto;
 					letter-spacing: 0.1em;
 					line-height:1.618;
+					text-align:center;
 
 					/*display: none;*/
 				}
 				.jumbo-child button {
-					background: #FFFFF0;
-					color: #330004;
+					background:  hsl(60, 100%, 97%);
+					color: hsl(355, 100%, 10%);
 					transition: all 0.25s ease;
 				}
 				.jumbo-child button:hover{
-					background-color:  #330004;
-					color:#FFFFF0;
+					background-color:  hsl(355, 100%, 10%);
+					color: hsl(60, 100%, 97%);
 				}
 			/* Arrow styling */
 				.arrow-container{ 
 					margin: 2% auto; 
 				}
 				.arrow {
-					width: 12vw;
-					height: 12vw;
+					width: 70px;
+					height: 70px;
 					margin: 0 auto 10px;
-					border-radius:100px;
-					background-color:#FFFFF0;
+					border-radius: 100px;
+					background-color: hsl(60, 100%, 97%);
 					box-shadow: 
 						0 3px 6px rgba(0, 0, 0, 0.36),
 						0 3px 6px rgba(0, 0, 0, 0.36),
@@ -223,8 +229,8 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 				}
 
 				.arrow i{
-					margin-top: 8px;
-					font-size: 8vw;
+					margin-top: 16px;
+					font-size: 42px;
 				}
 
 
@@ -232,40 +238,38 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 /* About section stylings */
 	.about-section{
 		width:100%;
-		background:#330004;
+		background:hsl(355, 100%, 10%);
 		margin:0 auto;
 	}
 	.about-container{
+		margin: 0 auto;
 		padding: 5% 0;
-		max-width:1400px;
+		width: 80%;
+		max-width:1440px;
 		
-		color: #E8E8DB;
+		color: hsl(60, 22%, 88%);
 	}
-	.about-section img{
+	.about-container > .flex-container {
+		width:40%;
+	}
+
+	.about-container .image-container{
+		width:100%;
+		max-width:250px;
+	}
+	.about-container img{
 		border-radius:100%;
 	}
-	.about-section p{
+	.about-container > .summary-container{
+		width:60%;
+	}
+
+	p{
 		font-weight:normal;
 		text-align:justify;
 		line-height: 1.618;
 		margin:5% auto;
 	}
-	.about-container, .blog-container{
-		margin: 0 auto;
-	}
-	/* Left Container */
-		.about-container{
-			width:100%;
-			align-items: center;
-		}
-		.about-container > .image-container{
-			width:250px; 
-			margin: 0 auto;
-		}
-		.about-container p{
-			
-		}
-
 /* Right Container *//*PEN STYLES*/
 .blog-section{
 	width:100%;
@@ -273,6 +277,10 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 .blog-container{
 	width:80%;
 	padding: 5% 0;
+	margin: 0 auto;
+}
+.blog-container > header > h1{
+	color: hsl(0, 0%, 22%);
 }
 .blog-container > .flex-parent{
 	margin: 5% auto 0;
@@ -301,12 +309,14 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	margin: 2% 0 2%;
 	text-align: left;
 	font-weight: 600;
+	color:#666;
 }
 .blog-content > p{
-	font-weight: 100;
+	font-weight: 200;
 	text-align: left;
 	font-size:1em;
 	margin: 0 0 2%;
+	color:#333;
 }
 .blog-content > p.description{
 	margin: 1% 0 2%;
@@ -316,7 +326,7 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	line-height: 1.3;
 	overflow-wrap: break-word;
 	overflow: hidden;
-	font-weight:300;
+	font-weight:400;
 }
 .blog-content > p.read-more{
 	text-align: right;
@@ -332,7 +342,7 @@ p.read-more:hover{
 /* Contact Form */
 	.contact-section{
 		width:100%;
-		background: #330004;
+		background: hsl(355, 100%, 10%);
 	}
 	.contact-container{
 		padding:5% 0;
@@ -372,7 +382,7 @@ p.read-more:hover{
 		background: transparent;
 		font-weight: 400;
 		text-align: left;
-		color:#FFFFF0;
+		color: hsl(60, 100%, 97%);
 		transition: 0.2s ease border-bottom;
 	}
 	.col-100 > input {
@@ -413,8 +423,8 @@ p.read-more:hover{
 		height:100%;
 		margin:0;
 		border-radius: 10px;
-		background: #FFFFF0;
-		color: #330004;
+		background:  hsl(60, 100%, 97%);
+		color: hsl(355, 100%, 10%);
 		transition: all ease 0.25s;
 	} 
 	.form-field button:hover{
@@ -423,27 +433,40 @@ p.read-more:hover{
 	}
 /* Footer section stylings */
 	.footer-section{
-		background:#330004;
-		/*padding: 1% 0;*/
+		background:hsl(355, 100%, 10%);
 		color:#8C8C83;
 	}
-
 	.footer-section > hr{
+		width:;
 		display: block;		
 		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(93,93,93,0.5), rgba(0,0,0,0));
 		margin: 0 auto 1%;
 	}
-	.footer-section > footer{
-		width:80%;
+
+	.footer-container{
+		width:100%;
+		max-width:1024px;
+		margin: 0 auto;
+		padding: 2% 0;
+	}
+
+
+	.footer-container > footer{
 		font-size:1.1em;
-		margin:0 auto;
+		margin: 0 auto;
+		
 		display:flex;
 			flex-flow: row wrap;
 			justify-content: space-between;
 			align-items: center;
 	}
 
+	.footer-container p{
+		margin: 0;
+	}
+
 	.icons-container{
+		width: auto;
 		justify-content: flex-end;
 		align-items:center;
 	}
@@ -459,254 +482,24 @@ p.read-more:hover{
 	}
 
 
-/*@media screen and (max-width:1440px){
-	.jumbo-child h1{
-		font-size:2.5em;
-	}
-	.jumbo-child p{
-		width:85%;
-		font-size:1em;
-		letter-spacing:0.08em;
-		font-weight:100;
-	}
-	.about-container{
-		width:80%;
-	}
-	.blog-post-container{
-		max-width:600px;
-	}
-	.post-container{
-		max-width:260px;
-	}
+@media screen and (max-width:1440px){
+	
 }
 
 @media screen and (max-width: 1200px){
-	.blog-post-container{
-		max-width: 550px;
-	}
-	.post-container{
-		max-width:250px;
-	}
+	
 }
 
 @media screen and (max-width:1024px){
-	.about-section{
-		width:100%;
-	}
-	.blog-post-container{
-		width:100%;
-		justify-content: space-between;
-	}	
-	.about-section{
-		padding-bottom:7.5%;
-		flex-direction: column;
-	}
-	.about-container, .blog-container{
-		width:90%;
-		margin: 0 auto;
-		padding:0;
-	}
-	.about-container p {
-		width:90%;
-		margin:0 auto;
-	}
-	.post-container{
-		max-width:275px;
-	}
-	.blog-post-container{
-		max-width: 600px;
-		justify-content: space-around;
-	}
+	
 }
 
 @media screen and (max-width: 768px){
-	.post-container{
-
-	}
-	.footer-section > footer{
-		width:85%;
-		font-size:0.9em;
-		flex-flow: column-reverse wrap;
-	}
-
-	.footer-section > footer i{
-		font-size: 2.5em;
-		padding:10% 15px;
-	}
+	
 }
 @media screen and (max-width:650px){
-	button[type="button"]{
-		margin: 2% 0;
-	}
-
-	.hidden{
-		display: block;
-	}
-	.jumbotron{
-		width:85%;
-	}
-	.jumbo-child{
-		flex-flow: column wrap;
-	}
-	.jumbo-child > .flex-container{
-		padding: 1%;
-	}
-	.arrow{
-		width:50px;
-		height:50px;
-	}
-	.arrow i{
-		font-size:2.5rem;
-	}
-	.about-container p {
-		width:70%;
-	}
-
-	.blog-post-container{
-		flex-flow:column wrap;
-	}
-	.post-container{
-		margin:5% auto;
-	}
-
+	
 }
 @media screen and (max-width: 768px){
-	button[type="button"]{
-		margin: 5% 0;
-
-	}
-	.about-section h1{
-		letter-spacing: 3px;
-	}
-}
-*/
-@media screen and (max-width:1440px){
-	button[type="button"], button[type="submit"] {
-		padding: 1% 3%;
-		font-size: 1vw;
-		font-weight:400;
-		margin: 1% 3%;
-	}
-	.logo-container > h2 { 
-		font-size: 3vw;
-	}
-	.navbar-container > ul > li{
-		font-size: 1.5vw;
-	}
-	.jumbo-child h1{
-		font-size: 3vw;
-	}
-	.jumbo-child p{
-		width:80%;
-		font-size: 1.5vw;
-		font-weight: 200;
-	}
-
-	.arrow{
-		width: 5vw;
-		height: 5vw;
-	}
-	.arrow i{
-		margin-top: 11px;
-		font-size: 3.5vw;
-	}
-}
-@media screen and (max-width:1440px) and (max-height:600px){
-	button[type="button"], button[type="submit"]{
-		margin: 3%;
-	}
-}
-
-@media screen and (max-width:1024px){
-	button[type="button"], button[type="submit"] {
-		padding: 1.5% 3%;
-		font-size: 2vw;
-		font-weight:400;
-	}
-	.logo-container > h2 { 
-		font-size: 5vw;
-	}
-	.navbar-container > ul > li{
-		font-size: 1.5vw;
-	}
-	.jumbo-child h1{
-		font-size: 2vw;
-	}
-	.jumbo-child p{
-		font-size:2vw;
-		font-weight: 200;
-	}
-
-	.arrow{
-		width: 6vw;
-		height: 6vw;
-	}
-	.arrow i{
-		margin-top: 6px;
-		font-size: 5vw;
-	}
-}
-
-@media screen and (max-width:1024px) and (max-height:700px){
-	button[type="button"], button[type="submit"] {
-		margin: 2%;
-	}
-}
-
-/*@media screen and (max-width: 767px) and (orientation: landscape) {
-  html {
-    transform: rotate(-90deg);
-    transform-origin: left top;
-    width: 100vh;
-    overflow-x: hidden;
-    position: absolute;
-    top: 100%;
-    left: 0;
-  }
-}*/
-
-@media screen and (max-width:425px){
-	button[type="button"], button[type="submit"] {
-		padding: 3.75% 7.5%;
-		font-size: 3vw;
-		font-weight:400;
-	}
-	.logo-container{
-		font-size: 2vw;
-	}
-	.logo-container > h2 { 
-		font-size: 5vw;
-	}
-	.navbar-container > ul > li{
-		font-size: 3.5vw;
-	}
-
-	.jumbo-child h1{
-		font-size:6vw;
-	}
-	.jumbo-child p{
-		font-size:4vw;
-		font-weight:200;
-	}
-	.arrow {
-		width: 17.5vw;
-		height: 17.5vw;
-	}
-
-	.arrow i{
-		margin-top: 12px;
-		font-size: 12vw;
-	}
-}
-
-@media screen and (max-width:375px){
-	.arrow{
-		width: 20vw;
-		height: 20vw;
-	}
-
-	.arrow i{
-		margin-top:10px;
-		font-size:15vw;
-	}
+	
 }
