--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ color library
 /* 1. Global Styles
 ======================================== */
 
-@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow:200,300,500,600');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700');
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
@@ -85,7 +85,7 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 		height: 2px;
 		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255,255,255,0.5), rgba(0,0,0,0));
 	}
-	.image-container > img { width:100%; height:auto;}
+	.image-container > img { width:100%; height: 100%;}
 	
 	.flex-parent{
 		width:100%;
@@ -287,13 +287,11 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 	justify-content: space-evenly;
 }
 .card-container{
-	width:33%;
+	width:30%;
 	min-height:400px;
-	margin: 0 3%;
 }
 .blog-card{
 	background:#fff;
-	min-height:100%;
 	margin: 0 5%;
 	flex-direction:column;
 	box-shadow:
@@ -331,6 +329,7 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 .blog-content > p.read-more{
 	text-align: right;
 	/*margin-top:12%;*/
+	float: bottom;
 	font-weight: 200;
 	transition: all ease 0.1s;
 }
@@ -493,69 +492,63 @@ p.read-more:hover{
 }
 
 @media screen and (max-width:1024px){
+	.summary-container{
+		font-size:1.3vw;
+	}
+
 	.blog-container > .flex-parent {
 		flex-direction: column;
-		margin: 5% auto 0;
 		justify-content:space-between;
 	}
 	.card-container{
-		width: 100%;
-		margin: 5% auto;
+		width:100%;
+		margin: 2% auto;
 		max-height: 250px;
 		min-height:0;
 	}
+
 	.blog-card{
+		margin: 0;
+		max-height:242px;
 		flex-direction: row;
 	}
+	.blog-card > .image-container{
+		width:40%;
+	}
+	/*.blog-card > .image-container > img{
+		width:200%;
+	}*/
 	.blog-content{
-		padding: 3% 5% 1%;
+		width:60%;
+		background:white;
+
+		padding: 1% 3%;
 	}
 	.blog-content > h1{
 		margin: 0;
 		line-height: 1.314;
 	}
 	.blog-content > p{
-		margin: 1% 0;
+		margin: 0;
+		font-size: 1.3vw;
 	}
 	.blog-content > p.description{
 		max-width:initial;
 		max-height: initial;
 		min-height: initial;
+		font-size:1.3vw;
+		line-height:1.618vw;
 		margin: 1% 0;
+		min-height:75px;
 	}
 	.blog-content > p.read-more{
-		margin-top:2%;
+		margin-right:5px;
+		font-size: 1.3vw;
+		
 	}
 }
 
-@media screen and (max-width: 768px){
-	
-	.blog-card > .image-container {
-		display:none;
-	}
-}
-@media screen and (max-width:650px){
-	
-}
-@media screen and (max-width: 768px){
-	
-}
-
-@media screen and (max-width:425px){
-	.jumbo-child h1{
-		font-size:24px;
-	}
-	.jumbo-child p {
-		font-size:12px;
-	}
-	.arrow{
-		width:60px;
-		height:60px;
-	}
-	.arrow i{
-		margin-top:12px;
-		font-size:36px;
-	}
+@media screen and (max-width: 900px){
 
 	.about-container{
 		flex-direction: column;
@@ -574,6 +567,46 @@ p.read-more:hover{
 		color: hsl(60, 22%, 88%);
 	}
 
+	.about-container .image-container{
+		margin: 0 auto;
+	}
+}
+
+@media screen and (max-width: 768px){
+	
+}
+@media screen and (max-width:650px){
+	
+}
+@media screen and (max-width: 768px){
+	
+}
+
+@media screen and (max-width:600px){
+	.blog-card{
+		width:80%;
+	}
+	.blog-card > .image-container {
+		display:none;
+	}
+	.blog-card > .blog-content{
+		width:90%;
+		margin: 0 auto;
+	}
+	.jumbo-child h1{
+		font-size:24px;
+	}
+	.jumbo-child p {
+		font-size:12px;
+	}
+	.arrow{
+		width:60px;
+		height:60px;
+	}
+	.arrow i{
+		margin-top:12px;
+		font-size:36px;
+	}
 	.contact-container {
 		width:80%;
 	}
