--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,22 +27,29 @@ color library
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-*{
+*, *:before, *:after{
 	margin:0;
 	padding:0;
-	box-sizing: border-box;
 	font-family:'Raleway', sans-serif;
 	font-weight: 100;
 	text-align: center;
+	
+	box-sizing: border-box; 
+	-webkit-box-sizing: border-box;
+  	-moz-box-sizing: border-box;
 }
 html{scroll-behavior: smooth;}
 
-body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
+body, html{
+	height:100%; 
+	font-size:14px; 
+	background-color: hsl(60, 100%, 97%), #FFFFF0;
+}
 
 /* 1. Typography Styles
 ======================================== */
 	h1{
-		color: hsl(60, 100%, 97%);
+		color: hsl(60, 100%, 97%), #FFFFF0;
 		font-family:'PT Sans Narrow', sans-serif; 
 		text-transform: uppercase;
 		font-weight: 600;
@@ -52,19 +59,19 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 		letter-spacing: 1px;
 	}	
 	p{
-		color: hsl(60, 100%, 97%);
+		color: hsl(60, 100%, 97%), #FFFFF0;
 		font-family:'Raleway', sans-serif;
 		font-weight: 300;
 		font-size: 16px; 
 	}
 	button[type="button"], button[type="submit"] {
-		background-color: hsl(355, 100%, 10%);
+		background-color: hsl(355, 100%, 10%), #330004;
 		border: none;
 		border-radius: 3px;
 		margin: 3%;
 		padding: 2.5%;
 		
-		color:  hsl(60, 100%, 97%);
+		color:  hsl(60, 100%, 97%), #FFFFF0;
 		text-transform: uppercase;
 		font-size: 12px;
 		font-weight:400;
@@ -119,7 +126,7 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 			max-width:1440px;
 			margin: 0 auto;
 			flex-direction: column;
-			color: hsl(60, 100%, 97%);
+			color: hsl(60, 100%, 97%), #FFFFF0;
 		}
 		.logo-container{
 			margin: 0 auto;
@@ -168,7 +175,7 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 			/* Jumbotron's child styling */
 				.jumbo-child{
 					justify-content: space-around;
-					color: hsl(60, 100%, 97%);
+					color: hsl(60, 100%, 97%), #FFFFF0;
 					text-align: center;
 				}
 
@@ -189,13 +196,13 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 					/*display: none;*/
 				}
 				.jumbo-child button {
-					background:  hsl(60, 100%, 97%);
-					color: hsl(355, 100%, 10%);
+					background:  hsl(60, 100%, 97%), #FFFFF0;
+					color: hsl(355, 100%, 10%), #330004;
 					transition: all 0.25s ease;
 				}
 				.jumbo-child button:hover{
-					background-color:  hsl(355, 100%, 10%);
-					color: hsl(60, 100%, 97%);
+					background-color:  hsl(355, 100%, 10%), #330004;
+					color: hsl(60, 100%, 97%), #FFFFF0;
 				}
 			/* Arrow styling */
 				.arrow-container{ 
@@ -206,7 +213,7 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 					height: 70px;
 					margin: 0 auto 10px;
 					border-radius: 100px;
-					background-color: hsl(60, 100%, 97%);
+					background-color: hsl(60, 100%, 97%), #FFFFF0;
 					box-shadow: 
 						0 3px 6px rgba(0, 0, 0, 0.36),
 						0 3px 6px rgba(0, 0, 0, 0.36),
@@ -238,7 +245,7 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 /* About section stylings */
 	.about-section{
 		width:100%;
-		background:hsl(355, 100%, 10%);
+		background:hsl(355, 100%, 10%), #330004;
 		margin:0 auto;
 	}
 	.about-container{
@@ -247,7 +254,7 @@ body, html{height:100%; font-size:14px; background-color: hsl(60, 100%, 97%);}
 		width: 80%;
 		max-width:1440px;
 		
-		color: hsl(60, 22%, 88%);
+		color: hsl(60, 22%, 88%), #E7E7DA;
 	}
 	.about-container > .flex-container {
 		width:40%;
@@ -341,7 +348,7 @@ p.read-more:hover{
 /* Contact Form */
 	.contact-section{
 		width:100%;
-		background: hsl(355, 100%, 10%);
+		background: hsl(355, 100%, 10%), #330004;
 	}
 	.contact-container{
 		padding:5% 0;
@@ -381,7 +388,7 @@ p.read-more:hover{
 		background: transparent;
 		font-weight: 400;
 		text-align: left;
-		color: hsl(60, 100%, 97%);
+		color: hsl(60, 100%, 97%), #FFFFF0;
 		transition: 0.2s ease border-bottom;
 	}
 	.col-100 > input {
@@ -414,7 +421,7 @@ p.read-more:hover{
 	  top:-18px;
 	  left:0;
 	  font-size:14px;
-	  color:#B8B88E;
+	  color: #B8B88E;
 	}
 
 	.form-field button{
@@ -422,8 +429,8 @@ p.read-more:hover{
 		height:100%;
 		margin:0;
 		border-radius: 10px;
-		background:  hsl(60, 100%, 97%);
-		color: hsl(355, 100%, 10%);
+		background:  hsl(60, 100%, 97%), #FFFFF0;
+		color: hsl(355, 100%, 10%), #330004;
 		transition: all ease 0.25s;
 	} 
 	.form-field button:hover{
@@ -432,8 +439,8 @@ p.read-more:hover{
 	}
 /* Footer section stylings */
 	.footer-section{
-		background:hsl(355, 100%, 10%);
-		color:#8C8C83;
+		background:hsl(355, 100%, 10%), #330004;
+		color: #8C8C83;
 	}
 	.footer-section > hr{
 		display: block;		
@@ -563,7 +570,7 @@ p.read-more:hover{
 
 	.about-description{
 		line-height:1.428;
-		color: hsl(60, 22%, 88%);
+		color: hsl(60, 22%, 88%), #E7E7DA;
 	}
 
 	.about-container .image-container{
