--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,6 @@ color library
 	text-align: center;
 	
 	-webkit-box-sizing: border-box;
-  	-moz-box-sizing: border-box;
 	box-sizing: border-box; 
 }
 html{scroll-behavior: smooth;}
@@ -90,22 +89,42 @@ body, html{
 	hr{
 		border: 0;
 		height: 2px;
+		background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(rgba(255,255,255,0.5)), to(rgba(0,0,0,0)));
+		background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(255,255,255,0.5), rgba(0,0,0,0));
+		background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(255,255,255,0.5), rgba(0,0,0,0));
 		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255,255,255,0.5), rgba(0,0,0,0));
 	}
 	.image-container > img { width:100%; height: 100%;}
 	
 	.flex-parent{
 		width:100%;
+		display:-webkit-inline-box;
+		display:-ms-inline-flexbox;
 		display:inline-flex;
 	}
 	.flex-container{
-		justify-content: space-around;
+		-ms-flex-pack: distribute;
+	    justify-content: space-around;
 	}
 	
 
 /* home section stylings */
 	.main-section{
 		height: 100%; 
+		background: -webkit-gradient(
+			linear,
+			left top, left bottom,
+			from(rgba(0, 0, 0, 0.5)),
+			to(rgba(0, 0, 0, 0.5))
+		), url("../images/adult-application-asian-733856.jpg"); 
+		background: -webkit-linear-gradient(
+			rgba(0, 0, 0, 0.5),
+			rgba(0, 0, 0, 0.5)
+		), url("../images/adult-application-asian-733856.jpg"); 
+		background: -o-linear-gradient(
+			rgba(0, 0, 0, 0.5),
+			rgba(0, 0, 0, 0.5)
+		), url("../images/adult-application-asian-733856.jpg"); 
 		background: linear-gradient(
 			rgba(0, 0, 0, 0.5),
 			rgba(0, 0, 0, 0.5)
@@ -116,8 +135,15 @@ body, html{
 	}
 	.home-container{
 		height: 100%;
-		justify-content: space-between;
-		flex-direction: column;
+		-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+        justify-content: space-between;
+		
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+    	-ms-flex-direction: column;
+        flex-direction: column;
+		
 		padding:0 5%;
 	}
 	/* header stylings */
@@ -125,14 +151,20 @@ body, html{
 			width:100%;
 			max-width:1440px;
 			margin: 0 auto;
-			flex-direction: column;
+			
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+	        flex-direction: column;
+			
 			color: hsl(60, 100%, 97%), #FFFFF0;
 		}
 		.logo-container{
 			margin: 0 auto;
 			text-transform: uppercase;
 			font-size: 2px;
-			justify-content: space-around;
+			-ms-flex-pack: distribute;
+			    justify-content: space-around;
 		}
 		.logo-container > h2 {
 			font-family: 'Lato', sans-serif; 
@@ -157,6 +189,8 @@ body, html{
 			line-height: 1.618;
 			text-transform: uppercase;
 			padding: 0%;
+			-webkit-transition: color 0.2s ease-in;
+			-o-transition: color 0.2s ease-in;
 			transition: color 0.2s ease-in;
 		}
 		.navbar-container > ul li:hover{
@@ -174,7 +208,8 @@ body, html{
 			}
 			/* Jumbotron's child styling */
 				.jumbo-child{
-					justify-content: space-around;
+					-ms-flex-pack: distribute;
+				    justify-content: space-around;
 					color: hsl(60, 100%, 97%), #FFFFF0;
 					text-align: center;
 				}
@@ -198,6 +233,8 @@ body, html{
 				.jumbo-child button {
 					background:  hsl(60, 100%, 97%), #FFFFF0;
 					color: hsl(355, 100%, 10%), #330004;
+					-webkit-transition: all 0.25s ease;
+					-o-transition: all 0.25s ease;
 					transition: all 0.25s ease;
 				}
 				.jumbo-child button:hover{
@@ -214,24 +251,47 @@ body, html{
 					margin: 0 auto 10px;
 					border-radius: 100px;
 					background-color: hsl(60, 100%, 97%), #FFFFF0;
-					box-shadow: 
+					-webkit-box-shadow: 
+						0 3px 6px rgba(0, 0, 0, 0.36),
+						0 3px 6px rgba(0, 0, 0, 0.36),
+						0 3px 6px rgba(0, 0, 0, 0.36),
+						0 3px 6px rgba(0, 0, 0, 0.36);
+					        box-shadow: 
 						0 3px 6px rgba(0, 0, 0, 0.36),
 						0 3px 6px rgba(0, 0, 0, 0.36),
 						0 3px 6px rgba(0, 0, 0, 0.36),
 						0 3px 6px rgba(0, 0, 0, 0.36);
 
 
-					  animation: bounce 2s infinite;
+				  	-webkit-animation: bounce 2s infinite;
+					animation: bounce 2s infinite;
+				}					
+				@-webkit-keyframes bounce {
+					0%, 20%, 50%, 80%, 100% {
+						-webkit-transform: translateY(0);
+				        transform: translateY(0);
+					}
+					40% {
+						-webkit-transform: translateY(-10px);
+				        transform: translateY(-10px);
+					}
+					60% {
+						-webkit-transform: translateY(-2px);
+				        transform: translateY(-2px);
+					}
 				}					
 				@keyframes bounce {
 					0%, 20%, 50%, 80%, 100% {
-						transform: translateY(0);
+						-webkit-transform: translateY(0);
+				        åtransform: translateY(0);
 					}
 					40% {
-						transform: translateY(-10px);
+						-webkit-transform: translateY(-10px);
+				        transform: translateY(-10px);
 					}
 					60% {
-						transform: translateY(-2px);
+						-webkit-transform: translateY(-2px);
+				        transform: translateY(-2px);
 					}
 				}
 
@@ -291,7 +351,9 @@ body, html{
 }
 .blog-container > .flex-parent{
 	margin: 5% auto 0;
-	justify-content: space-evenly;
+	-webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
 }
 .card-container{
 	width:30%;
@@ -300,8 +362,18 @@ body, html{
 .blog-card{
 	background:#fff;
 	margin: 0 5%;
-	flex-direction:column;
-	box-shadow:
+	-webkit-box-orient:vertical;
+	-webkit-box-direction:normal;
+	-ms-flex-direction:column;
+    flex-direction:column;
+	
+	-webkit-box-shadow:
+		2.5px 2.5px 15px #EEE,
+		-2.5px -2.5px 15px #EEE,
+		2.5px -2.5px 15px #EEE,
+		-2.5px 2.5px 15px #EEE;
+    
+    box-shadow:
 		2.5px 2.5px 15px #EEE,
 		-2.5px -2.5px 15px #EEE,
 		2.5px -2.5px 15px #EEE,
@@ -338,6 +410,8 @@ body, html{
 	/*margin-top:12%;*/
 	float: bottom;
 	font-weight: 200;
+	-webkit-transition: all ease 0.1s;
+	-o-transition: all ease 0.1s;
 	transition: all ease 0.1s;
 }
 
@@ -360,7 +434,14 @@ p.read-more:hover{
 		max-width:500px;
 		min-height: 250px;
 		margin-top: 5%;
-		justify-content: center;
+
+		-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+        justify-content: center;
+
+		-webkit-box-orient:vertical;
+		-webkit-box-direction:normal;
+	    -ms-flex-direction:column;
 		flex-direction:column;
 	}
 	.contact-form > .flex-parent{
@@ -389,6 +470,8 @@ p.read-more:hover{
 		font-weight: 400;
 		text-align: left;
 		color: hsl(60, 100%, 97%), #FFFFF0;
+		-webkit-transition: 0.2s ease border-bottom;
+		-o-transition: 0.2s ease border-bottom;
 		transition: 0.2s ease border-bottom;
 	}
 	.col-100 > input {
@@ -410,6 +493,8 @@ p.read-more:hover{
 		cursor: text;  
 		pointer-events:none;
 
+		-webkit-transition: 0.2s ease all;
+		-o-transition: 0.2s ease all;
 		transition: 0.2s ease all;
 	}
 	/*.contact-form input:focus ~ label {
@@ -431,6 +516,8 @@ p.read-more:hover{
 		border-radius: 10px;
 		background:  hsl(60, 100%, 97%), #FFFFF0;
 		color: hsl(355, 100%, 10%), #330004;
+		-webkit-transition: all ease 0.25s;
+		-o-transition: all ease 0.25s;
 		transition: all ease 0.25s;
 	} 
 	.form-field button:hover{
@@ -444,6 +531,9 @@ p.read-more:hover{
 	}
 	.footer-section > hr{
 		display: block;		
+		background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(rgba(93,93,93,0.5)), to(rgba(0,0,0,0)));		
+		background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(93,93,93,0.5), rgba(0,0,0,0));		
+		background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(93,93,93,0.5), rgba(0,0,0,0));		
 		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(93,93,93,0.5), rgba(0,0,0,0));
 		margin: 0 auto 1%;
 	}
@@ -460,10 +550,23 @@ p.read-more:hover{
 		font-size:1.1em;
 		margin: 0 auto;
 		
+		display:-webkit-box;
+		
+		display:-ms-flexbox;
+		
 		display:flex;
-			flex-flow: row wrap;
-			justify-content: space-between;
-			align-items: center;
+			-webkit-box-orient: horizontal;
+			-webkit-box-direction: normal;
+		    -ms-flex-flow: row wrap;
+	        flex-flow: row wrap;
+
+			-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+	        justify-content: space-between;
+
+			-webkit-box-align: center;
+		    -ms-flex-align: center;
+	        align-items: center;
 	}
 
 	.footer-container h6{
@@ -472,14 +575,21 @@ p.read-more:hover{
 
 	.icons-container{
 		width: auto;
-		justify-content: flex-end;
-		align-items:center;
+		-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+        justify-content: flex-end;
+
+		-webkit-box-align:center;
+	    -ms-flex-align:center;
+        align-items:center;
 	}
 	
 	.icons-container i{
 		font-size:1.5em;
 		padding:0 10px;
 		color:hsl(60, 3%, 35%);
+		-webkit-transition: color 0.3s linear;
+		-o-transition: color 0.3s linear;
 		transition: color 0.3s linear;
 	}
 	.icons-container i:hover{
@@ -497,14 +607,20 @@ p.read-more:hover{
 	}
 }
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:1080px){
 	.summary-container{
 		font-size:1.3vw;
 	}
 
 	.blog-container > .flex-parent {
-		flex-direction: column;
-		justify-content:space-between;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+        flex-direction: column;
+
+		-webkit-box-pack:justify;
+	    -ms-flex-pack:justify;
+        justify-content:space-between;
 	}
 	.card-container{
 		width:100%;
@@ -516,7 +632,10 @@ p.read-more:hover{
 	.blog-card{
 		margin: 0;
 		max-height:242px;
-		flex-direction: row;
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+        flex-direction: row;
 	}
 	.blog-card > .image-container{
 		width:40%;
@@ -541,11 +660,11 @@ p.read-more:hover{
 	.blog-content > p.description{
 		max-width:initial;
 		max-height: initial;
-		min-height: initial;
+		min-height:75px;
 		font-size:1.3vw;
 		line-height:1.618vw;
+
 		margin: 1% 0;
-		min-height:75px;
 	}
 	.blog-content > p.read-more{
 		margin-right:5px;
@@ -557,7 +676,10 @@ p.read-more:hover{
 @media screen and (max-width: 900px){
 
 	.about-container{
-		flex-direction: column;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+        flex-direction: column;
 	}
 	.about-container > .flex-container{
 		margin: 0 auto;
@@ -618,7 +740,10 @@ p.read-more:hover{
 	}
 
 	.footer-container > .flex-parent{
-		flex-direction: column-reverse;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: reverse;
+		-ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
 	}
 	.footer-container .flex-parent h6{
 		font-size:12px;
