--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ color library
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-*, *:before, *:after{
+*{
 	margin:0;
 	padding:0;
 	font-family:'Raleway', sans-serif;
@@ -81,9 +81,9 @@ body, html{
 	}
 	
 	a{
-		display:block;
+		display: block;
 		text-decoration: none;
-		color:inherit;
+		color: inherit;
 	}
 
 	hr{
@@ -298,7 +298,6 @@ body, html{
 				.arrow i{
 					margin-top: 16px;
 					font-size: 42px;
-					color: #330004;
 				}
 
 
@@ -512,7 +511,6 @@ p.read-more:hover{
 
 	.form-field button{
 		width:100%;
-		height:100%;
 		margin:0;
 		border-radius: 10px;
 		background:  hsl(60, 100%, 97%);
@@ -589,6 +587,7 @@ p.read-more:hover{
 		font-size:1.5em;
 		padding:0 10px;
 		color: hsl(60, 3%, 35%);
+		
 		-webkit-transition: color 0.3s linear;
 		-o-transition: color 0.3s linear;
 		transition: color 0.3s linear;
